# serializer version: 1
# name: test_artifacts_must_exist
  '''
  +- Error ----------------------------------------------------------------------+
  | During evaluation of DefinitionV20 in project definition following errors    |
  | were encountered:                                                            |
  | For field entities.my_streamlit you provided '{'artifacts': {'1':            |
  | 'foo_bar.py'}}'. This caused: Unable to extract tag using discriminator      |
  | 'type'                                                                       |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_streamlit_nonexisting_file[example_streamlit-opts0]
  '''
  +- Error ----------------------------------------------------------------------+
  | Provided file foo.bar does not exist                                         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_streamlit_nonexisting_file[example_streamlit-opts1]
  '''
  +- Error ----------------------------------------------------------------------+
  | Provided file foo.bar does not exist                                         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_streamlit_nonexisting_file[example_streamlit_v2-opts2]
  '''
  +- Error ----------------------------------------------------------------------+
  | Streamlit test_streamlit already exist. If you want to replace it use        |
  | --replace flag.                                                              |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_streamlit_nonexisting_file[example_streamlit_v2-opts3]
  '''
  +- Error ----------------------------------------------------------------------+
  | During evaluation of DefinitionV20 in project definition following errors    |
  | were encountered:                                                            |
  | For field entities.test_streamlit.streamlit you provided '{'artifacts':      |
  | ['foo.bar'], 'identifier': 'test_streamlit', 'main_file':                    |
  | 'streamlit_app.py', 'query_warehouse': 'test_warehouse', 'stage':            |
  | 'streamlit', 'title': 'My Fancy Streamlit', 'type': 'streamlit'}'. This      |
  | caused: Value error, Specified artifact foo.bar does not exist locally.      |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_multiple_streamlit_raise_error_if_multiple_entities
  '''
  Usage: root streamlit deploy [OPTIONS] [ENTITY_ID]
  Try 'root streamlit deploy --help' for help.
  +- Error ----------------------------------------------------------------------+
  | Multiple entities of type streamlit found. Please provide entity id for the  |
  | operation.                                                                   |
  +------------------------------------------------------------------------------+
  
  '''
# ---
